--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -10,5 +10,6 @@
 @import "foundation/vendors-extension/_highlight-override.scss";
 
 @import "layout/_body.scss";
+@import "layout/_book.scss";
 
 @import "_custom";
