--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -9,7 +9,7 @@
 @import "foundation/vendors-extension/_bootstrap-override.scss";
 @import "foundation/vendors-extension/_highlight-override.scss";
 
-@import "layout/_body.scss";
-@import "layout/_book.scss";
+@import "layout/_main.scss";
+@import "object/project/_sidenav.scss";
 
 @import "_custom";
