--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,25 +7,32 @@
 </head>
 <body>
 
-<div class="layout--body markdown-section">
+<div class="layout--main">
+  <div class="layout--main-summary">
+    {{ partial "side-nav.html" . }}
+  </div>
 
-    <section id="body">
-      <div class="padding highlightable">
-        <h1>Customize your own home page</h1>
-        <p>
-          The site is working, change the URL in your browser to get to any custom page. But, don't forget to <a href="https://gohugo.io/themes/customizing/">overwrite this index.html</a> with your own. You typically have 3 choices :
-        </p>
-        <ul>
-          <li><b>1. </b> Create an overview page for your project</li>
-          <li><b>2. </b> Create an empty html page with this code in the head tag to redirect to one of your documentation page : <code>&lt;meta http-equiv="refresh" content="0; url=http://example.com/"/&gt;</code> </li>
-          <li><b>3. </b> Configure your server to automatically redirect home page to one your documentation page</li>
-        </ul>
-        <p><i class="fa fa-heart fa-4x"></i></p>
-      </div>
-    </section>
+  <div class="layout--main-body">
 
+    <div class="p-page markdown-section">
+      <section id="body">
+        <div class="padding highlightable">
+          <h1>Customize your own home page</h1>
+          <p>
+            The site is working, change the URL in your browser to get to any custom page. But, don't forget to <a href="https://gohugo.io/themes/customizing/">overwrite this index.html</a> with your own. You typically have 3 choices :
+          </p>
+          <ul>
+            <li><b>1. </b> Create an overview page for your project</li>
+            <li><b>2. </b> Create an empty html page with this code in the head tag to redirect to one of your documentation page : <code>&lt;meta http-equiv="refresh" content="0; url=http://example.com/"/&gt;</code> </li>
+            <li><b>3. </b> Configure your server to automatically redirect home page to one your documentation page</li>
+          </ul>
+          <p><i class="fa fa-heart fa-4x"></i></p>
+        </div>
+      </section>
+    </div>
+
+  </div>
 </div>
-
 
 </body>
 </html>
