--- a/layouts/partials/default-content.html
+++ b/layouts/partials/default-content.html
@@ -1,3 +1,10 @@
-<div class="p-page markdown-section">
-  {{ .Content }}
+<div class="p-page">
+
+  <div class="p-page-header">
+    <a class="btn pull-left js-toolbar-action" aria-label="" href="#"><i class="fa fa-align-justify"></i></a>
+  </div>
+  <div class="p-page-content markdown-section">
+    {{ .Content }}
+  </div>
+
 </div>
