--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -37,6 +37,7 @@
 {{ partial "head/twitter_cards.html" . }}
 {{ partial "head/google_analytics_async.html" . }}
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.slim.min.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -47,11 +48,3 @@
 {{ range readDir "/static/assets/css" }}
 <link rel="stylesheet" href="/assets/css{{ .Name | relURL }}?unix={{ $unix_time }}">
 {{ end }}
-
-<script src="https://cdn.rawgit.com/tholman/dom-animator/6073c407/dom-animator.min.js"></script>
-<script>
-    var domAnimator = new DomAnimator();
-    domAnimator.addFrame('Nice meeting you. (o_o)');
-    domAnimator.addFrame('Nice meeting you. (-_o)');
-    domAnimator.animate();
-</script>
