--- a/assets/sass/js/_content-only.scss
+++ b/assets/sass/js/_content-only.scss
@@ -3,12 +3,15 @@
 .js-content-only{
   .layout--main-summary{
     left: 0;
+    @media (min-width: 700px){
+      left: -300px;
+    }
   }
   .layout--main-body{
     transform: translate(calc(100% - 60px),0);
-    @media (min-width: 600px){
+    @media (min-width: 700px){
       transform: translate(0,0);
-      left: 300px;
+      left: 0;
     }
   }
 }
