--- a/assets/sass/layout/_main.scss
+++ b/assets/sass/layout/_main.scss
@@ -22,8 +22,8 @@ body, html {
     background: #fafafa;
     border-right: 1px solid rgba(0,0,0,.07);
     transition: left 250ms ease;
-    @media (min-width: 600px){
-      left: -300px;
+    @media (min-width: 700px){
+      left: 0px;
       width: 300px;
     }
 }
@@ -60,6 +60,10 @@ body, html {
     background: #fff;
     padding-bottom: 20px;
     transition: left 250ms ease, transform 250ms ease;
+    @media (min-width: 700px){
+      transform: translate(0,0);
+      left: 300px;
+    }
 }
 
 .p-page{
