--- a/layouts/partials/side-nav.html
+++ b/layouts/partials/side-nav.html
@@ -2,7 +2,7 @@
 
 <nav class="p-sidenav" role="navigation">
 
-  <ul class="p-sidenav--list">
+  <!-- <ul class="p-sidenav--list">
   <li class="p-sidenav--list-item active" data-level="1.1" data-path="./">
     <a href="./">
       Read Me
@@ -349,6 +349,67 @@
       Published with GitBook
     </a>
   </li>
+</ul> -->
+
+<ul class="p-sidenav--list">
+{{ $page := . }}
+
+{{ if .Site.Params.menu }}
+  {{ $.Scratch.Set "menuItems" (slice) }}
+  {{ range $i, $key := .Site.Params.menu }}
+    {{ if isset $page.Site.Sections $key }}
+      {{ $.Scratch.Add "menuItems" $key }}
+    {{ else }}
+      <li class="dd-item"><div class="notices warning"><p>
+      {{ printf "Unknown section '%s' found in site menu" $key }}
+      </p></div></li>
+    {{ end }}
+  {{ end }}
+{{ else }}
+  {{ $.Scratch.Set "menuItems" .Site.Sections }}
+{{ end }}
+
+{{ $menuItems := $.Scratch.Get "menuItems" }}
+{{ range $i, $key := $menuItems }}
+{{ if ne $key "" }}
+
+{{ if not $.Site.Params.menu }}
+  {{ $.Scratch.Set "currentItem" (index $page.Site.Sections $i) }}
+{{ else }}
+  {{ $.Scratch.Set "currentItem" (index $page.Site.Sections $key) }}
+{{ end }}
+{{ $value := $.Scratch.Get "currentItem" }}
+{{ $first := (index $value 0).Page }}
+
+<li class="p-sidenav--list-item {{ if eq $page.RelPermalink $first.RelPermalink }}active{{ end }}" data-nav-id="{{ $first.RelPermalink }}">
+  <a href="{{ $first.RelPermalink }}">
+    <span>
+      {{ if isset $first.Params "icon" }}
+        {{ printf $first.Params.icon | safeHTML }}
+      {{ end }}
+       {{ $first.Title }}
+      {{ if $page.Site.Params.showVisitedLinks}}
+        <i class="fa fa-check read-icon"></i>
+       {{ end }}
+     </span>
+  </a>
+  {{ if gt $value.Len 1}}
+  <ul>
+    {{ range $k, $p := $value }}
+    {{ if gt $k 0 }}
+      <li class="p-sidenav--list-item {{ if eq $page.RelPermalink $p.Page.RelPermalink }}active{{ end }}" data-nav-id="{{ $p.Page.RelPermalink }}">
+        <a href="{{ $p.Page.RelPermalink }}">
+          <span>{{ $p.Page.Title }}    {{ if $page.Site.Params.showVisitedLinks}}  <i class="fa fa-check read-icon">  {{ end }} </i></span>
+        </a>
+      </li>
+    {{ end }}
+    {{ end }}
+  </ul>
+  {{ end }}
+</li>
+
+{{ end }}
+{{ end }}
 </ul>
 
 
