--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -12,5 +12,6 @@
 @import "js/_content-only.scss";
 @import "layout/_main.scss";
 @import "object/project/_sidenav.scss";
+@import "object/utility/_utils.scss";
 
 @import "_custom";
