--- a/layouts/index.html
+++ b/layouts/index.html
@@ -32,7 +32,7 @@
               <li><b>2. </b> Create an empty html page with this code in the head tag to redirect to one of your documentation page : <code>&lt;meta http-equiv="refresh" content="0; url=http://example.com/"/&gt;</code> </li>
               <li><b>3. </b> Configure your server to automatically redirect home page to one your documentation page</li>
             </ul>
-            <p><i class="fa fa-heart fa-4x"></i></p>
+            <p class="tc"><i class="fa fa-heart fa-4x"></i></p>
           </div>
         </section>
       </div>
