--- a/layouts/partials/foot.html
+++ b/layouts/partials/foot.html
@@ -5,3 +5,11 @@ $(function(){
   });
 })
 </script>
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/3.2.2/anchor.min.js"></script>
+<script>
+document.addEventListener("DOMContentLoaded", function(event) {
+  anchors.add();
+});
+</script>
