--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -13,5 +13,6 @@
 @import "layout/_main.scss";
 @import "object/project/_sidenav.scss";
 @import "object/utility/_utils.scss";
+@import "shortcodes/_notice.scss";
 
 @import "_custom";
