--- a/layouts/partials/foot.html
+++ b/layouts/partials/foot.html
@@ -7,7 +7,7 @@ $(function(){
 </script>
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/3.2.2/anchor.min.js"></script>
+<script src="/buildin-assets/libs/anchor-js/3.2.2/anchor.min.js"></script>
 <script>
 document.addEventListener("DOMContentLoaded", function(event) {
   anchors.add();
