--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -37,38 +37,38 @@
 {{ partial "head/twitter_cards.html" . }}
 {{ partial "head/google_analytics_async.html" . }}
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.slim.min.js"></script>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" rel="stylesheet">
+<script src="/buildin-assets/libs/jquery/3.1.1/jquery.slim.min.js"></script>
+<link href="/buildin-assets/libs/normalize/5.0.0/normalize.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/featherlight/1.7.0/featherlight.min.css" rel="stylesheet">
+<link href="/buildin-assets/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="/buildin-assets/libs/featherlight/1.7.0/featherlight.min.css" rel="stylesheet">
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/accesslog.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/apache.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/bash.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/coffeescript.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/cpp.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/cs.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/css.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/diff.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/go.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/http.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/ini.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/java.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/javascript.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/json.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/makefile.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/markdown.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/nginx.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/perl.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/php.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/python.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/ruby.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/scss.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/sql.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/xml.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/languages/yaml.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/highlight.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/accesslog.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/apache.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/bash.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/coffeescript.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/cpp.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/cs.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/css.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/diff.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/go.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/http.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/ini.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/java.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/javascript.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/json.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/makefile.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/markdown.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/nginx.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/perl.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/php.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/python.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/ruby.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/scss.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/sql.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/xml.min.js"></script>
+<script src="/buildin-assets/libs/highlight.js/9.9.0/languages/yaml.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 
 {{ $unix_time := .Now.Unix }}
