--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -38,7 +38,7 @@
 {{ partial "head/twitter_cards.html" . }}
 {{ partial "head/google_analytics_async.html" . }}
 
-<script src="/buildin-assets/libs/jquery/3.1.1/jquery.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <link href="/buildin-assets/libs/normalize/5.0.0/normalize.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
 <link href="/buildin-assets/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
