--- a/layouts/partials/foot.html
+++ b/layouts/partials/foot.html
@@ -2,6 +2,7 @@
 $(function(){
   $('.js-toolbar-action').on('click', function(){
     $('.layout--main').toggleClass('js-content-only');
+    $('.layout--main-body').animate({scrollTop:0});
   });
 })
 </script>
