--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -11,6 +11,7 @@
 
 @import "js/_content-only.scss";
 @import "layout/_main.scss";
+@import "object/project/_page.scss";
 @import "object/project/_sidenav.scss";
 @import "object/utility/_utils.scss";
 @import "shortcodes/_notice.scss";
