--- a/assets/sass/object/project/_sidenav.scss
+++ b/assets/sass/object/project/_sidenav.scss
@@ -2,7 +2,7 @@
 .p-sidenav{
     display: block;
     li ul{
-        padding-left: 20px;
+        padding-left: 2em;
     }
     li{
         margin: 0;
