--- a/assets/sass/shortcodes/_notice.scss
+++ b/assets/sass/shortcodes/_notice.scss
@@ -19,7 +19,7 @@ div.sc-notices{
   .sc-notices-content{
     border-radius: 0 0 4px 4px;
     padding: 15px;
-    p{margin-bottom: 0;}
+    p:last-child{margin-bottom: 0;}
   }
   // common END
 
