--- a/layouts/partials/default-content.html
+++ b/layouts/partials/default-content.html
@@ -1,10 +1,14 @@
-<div class="p-page">
+<div class="p-page p-page-theme-blue">
 
   <div class="p-page-header">
     <a class="btn pull-left js-toolbar-action" aria-label="" href="#"><i class="fa fa-align-justify"></i></a>
   </div>
+  <div class="p-page-title">
+    <h1>{{ .Title }}</h1>
+  </div>
   <div class="p-page-content markdown-section">
     {{ .Content }}
   </div>
+  <div class="p-page-footer">{{ .Title }}</div>
 
 </div>
