--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -14,6 +14,8 @@
 @import "object/project/_page.scss";
 @import "object/project/_sidenav.scss";
 @import "object/utility/_utils.scss";
+@import "shortcodes/_hatena-embed.scss";
+@import "shortcodes/_img.scss";
 @import "shortcodes/_notice.scss";
 
 @import "_custom";
