--- a/layouts/partials/foot.html
+++ b/layouts/partials/foot.html
@@ -14,3 +14,5 @@ document.addEventListener("DOMContentLoaded", function(event) {
   anchors.add();
 });
 </script>
+
+{{ partial "plugin/script.html" . }}
