--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -77,3 +77,4 @@
 {{ range readDir "/static/assets/css" }}
 <link rel="stylesheet" href="/assets/css{{ .Name | relURL }}?unix={{ $unix_time }}">
 {{ end }}
+{{ partial "plugin/style.html" . }}
