--- a/layouts/partials/default-content.html
+++ b/layouts/partials/default-content.html
@@ -1,4 +1,4 @@
-<div class="p-page p-page-theme-blue">
+<div class="p-page p-page-theme-blue convert-emoji">
 
   <div class="p-page-header">
     <a class="btn pull-left js-toolbar-action" aria-label="" href="#"><i class="fa fa-align-justify"></i></a>
