--- a/assets/sass/object/project/_page.scss
+++ b/assets/sass/object/project/_page.scss
@@ -60,6 +60,10 @@
             font-weight: bold;
             background: none;
         }
+
+        h2{
+          margin-top: 72px;
+        }
     }
 
     .p-page-footer{
