--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -43,6 +43,7 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
 <link href="/buildin-assets/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <link href="/buildin-assets/libs/featherlight/1.7.0/featherlight.min.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/xcode.min.css" rel="stylesheet">
 
 <script src="/buildin-assets/libs/highlight.js/9.9.0/highlight.min.js"></script>
 <script src="/buildin-assets/libs/highlight.js/9.9.0/languages/accesslog.min.js"></script>
