--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -17,6 +17,7 @@
 @import "object/utility/_utils.scss";
 @import "shortcodes/_hatena-embed.scss";
 @import "shortcodes/_img.scss";
+@import "shortcodes/_intro.scss";
 @import "shortcodes/_notice.scss";
 
 @import "_custom";
