--- a/assets/sass/object/project/_page.scss
+++ b/assets/sass/object/project/_page.scss
@@ -68,6 +68,7 @@
     }
 
     .p-page-footer{
+      margin-top: 72px;
       padding: 10px 20px;
       border-top: 1px solid #333;
       color: #333;
